[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.6"
aiogram = "^2.6.1"
python-dotenv = "^0.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pyflakes = "^2.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
